:up: Add padding to fix flowing text into overflow area

--- a/src/components/_menu.scss
+++ b/src/components/_menu.scss
@@ -96,12 +96,18 @@
 
   * {
     @include animation($nestedMenu-animationname, $nestedMenu-animationduration, ease-out, false, backwards);
+    padding-right: $nestedMenu-marginleft + $controls-padding-x; // add padding to prevent content from going outside menu after applying margin-left
     margin-left: $nestedMenu-marginleft; // indent nested Menu items
+  }
+
+  .menu {
+    padding-right: 0; // remove padding on nested menu
   }
 
   .menu-trigger {
     @include animation(none); // override style from nested Menu items
     margin-left: 0; // override style from nested Menu items
+    padding-right: $controls-padding-x; // add padding to prevent content from going outside menu after applying margin-left
   }
 }
 
